<resources>
    <string name="app_name">Regatta Timer</string>

    <string name="app_info">The Regatta Timer App for Smartwatches acts like an Optimum Time Series 3 watch which is used on sailing regattas. It has all the timer and stop watch functionality implemented as the regular watch.</string>

    <string name="actions">Actions:</string>
    <string name="startstop_button">Start/Stop</string>
    <string name="startstop_info">If a count down time is set it starts/stops the couting down. Otherwise a stop watch (count up) ist started/stopped.</string>
    <string name="sync_button">Sync</string>
    <string name="sync_info">Synchronizes the timer in count down mode to the next whole minute.</string>
    <string name="clear_button">CLEAR</string>
    <string name="clear_info">Resets the the count down and stop watch.</string>
    <string name="program_button">PROG</string>
    <string name="program_info">Adds the configured amount of time to the count down.</string>
    <string name="mode_change">Mode Changes (long touch):</string>
    <string name="mode_clear_button">CLEAR</string>
    <string name="mode_clear_info">Changing interval mode between repeating and up/down.</string>
    <string name="mode_program_button">PROG</string>
    <string name="mode_program_info">Changing amount of time to be added. Available modes: 5,4,1,0 / 3M / 2M / 1M</string>
</resources>
