<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_text"
        android:layout_marginBottom="10dp" android:textAppearance="?android:attr/textAppearanceMedium" />


    <TableLayout android:layout_below="@id/info_text"
        android:id="@+id/actions_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1"
        android:orientation="vertical">
        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/actions"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actions"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </TableRow>
        <TableRow>

            <Button android:layout_gravity="center_vertical"
                android:id="@+id/startstop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startstop_button"
                android:clickable="false" android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startstop_info" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <Button android:layout_gravity="center_vertical"
                android:id="@+id/progam_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_button"
                android:clickable="false" android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_info" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <Button android:layout_gravity="center_vertical"
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button"
                android:clickable="false" android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_info" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <Button android:layout_gravity="center_vertical"
                android:id="@+id/sync_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_button"
                android:clickable="false" android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_info" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/modes"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_below="@id/actions_table"
                android:layout_height="wrap_content"
                android:text="@string/mode_change" android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <Button android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_button"
                android:clickable="false" android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_program_info" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <Button android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button"
                android:clickable="false" android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_clear_info" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
